<resources>
    <string name="app_name">Телефонная книга</string>
    <string name="dataOfUserText">Введите данные пользователя</string>
    <string name="addUserText">Добавить 1 пользователя</string>
    <string name="addUsersText">Добавить массу пользователей</string>
    <string name="saveText">Сохранить</string>
    <string name="nameUser">Имя пользователя:</string>
    <string name="lastNameUser">Фамилия пользователя:</string>
    <string name="phoneUser">Телефон: +7...</string>
    <string name="phoneNumber">Номер телефона: </string>
    <string name="infoUserText">Информация о пользователе</string>
    <string name="editUser">Редактировать</string>
    <string name="deleteUser">Удалить</string>
    <string name="backInMainText">Вернуться на главный экран</string>
</resources>